syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message HomeAvatarSummonEventInfo {
	uint32 event_id = 1;
	uint32 avatar_id = 2;
	uint32 suit_id = 3;
	uint32 event_over_time = 4;
	uint32 random_position = 5;
	uint32 guid = 7;
}
